Version 1.0.0
2012-07-26 Stefan Busemannn: Feature - filelist.securityOptions.allowServerRequest
2012-07-23 Stefan Busemannn: Feature staticFilters - Filters can be defined via TS
2012-06-22 Stefan Busemannn: new TS Option filelist.latestView.useGroupedFileList = 1 shows the latest view as a grouped file list
2011-12-29 Stefan Busemannn: Bug #32585 (Resolved): tx_dam_cat read_access not merged for a document with many categories
2011-12-29 Stefan Busemannn: Bug #32620 (Resolved): TCA configuration of tx_damfrontend_feuser_upload add allowed Typoscript change: The setting filelist.orderBy needs now a table name prefix. Example filelist.orderBy = tx_dam.crdate DESC

Version 0.8.4
2011-12-29 Stefan Busemann: Bug #32838 (Resolved): Call to undefined method t3lib_div::GPvar() in /html/typo3/typo3conf/ext/d...

Version 0.8.2
2011-12-21 Stefan Busemann: Bug #32426 (Resolved): Deleted FE_groups are visible
2011-12-21 Stefan Busemann: Revision 55767: Bug #32711 (Resolved): Call to deprecated function in pushfile.php


Version 0.8.0
2011-07-01 Stefan Busemann: fixed bug #27804: latestView.limit does not work
2011-06-09 Stefan Busemann: added ts option filelist.groupedFileListGroupByTreeID – can be set to a tree ID so that the search result is grouped by the selected categories of this category selection
2011-06-09 Stefan Busemann: added ts option filterview.showOnlyFilesOfAllowedCategories - if set, the result is always filtered for the given category
2011-03-18 Ralf Merz: fix in tx_damfrontend_DAL_categories: checkCategoryAccess() now checks fe_user groups recursively
Ralf Merz: added Feature #13085: Using language markers in renderVersioningForm()
Ralf Merz: added Feature #13788: Do not show categories in lowest tree-level if there are no files in it
Feature #13677: Ralf Merz: new TypoScript option added to hide categories with no access
fixed Bug #10732: Missing Marker ###FILE_SIZE_HEADER###